tests/baselines/reference/mixingStaticAndInstanceOverloads(strict=true).errors.txt
mixingStaticAndInstanceOverloads.ts(3,5): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(4,5): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(5,12): error TS2388: Function overload must not be static.
mixingStaticAndInstanceOverloads.ts(5,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
mixingStaticAndInstanceOverloads.ts(9,12): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(10,12): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(11,5): error TS2387: Function overload must be static.
mixingStaticAndInstanceOverloads.ts(11,10): error TS7006: Parameter 'a' implicitly has an 'any' type.
mixingStaticAndInstanceOverloads.ts(15,5): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(16,12): error TS2388: Function overload must not be static.
mixingStaticAndInstanceOverloads.ts(16,12): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(17,5): error TS2387: Function overload must be static.
mixingStaticAndInstanceOverloads.ts(17,10): error TS7006: Parameter 'a' implicitly has an 'any' type.
mixingStaticAndInstanceOverloads.ts(21,12): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(22,5): error TS2387: Function overload must be static.
mixingStaticAndInstanceOverloads.ts(22,5): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(23,12): error TS2388: Function overload must not be static.
mixingStaticAndInstanceOverloads.ts(23,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
mixingStaticAndInstanceOverloads.ts(27,5): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(28,5): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(29,10): error TS7006: Parameter 'a' implicitly has an 'any' type.
mixingStaticAndInstanceOverloads.ts(32,12): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(33,12): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
mixingStaticAndInstanceOverloads.ts(34,17): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== mixingStaticAndInstanceOverloads.ts (24 errors) ====
    class C1 {
        // ERROR
        foo1(n: number);
        ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
        foo1(s: string);
        ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo1(a) { }
               ~~~~
!!! error TS2388: Function overload must not be static.
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    class C2 {
        // ERROR
        static foo2(n: number);
               ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo2(s: string);
               ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
        foo2(a) { }
        ~~~~
!!! error TS2387: Function overload must be static.
             ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    class C3 {
        // ERROR
        foo3(n: number);
        ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo3(s: string);
               ~~~~
!!! error TS2388: Function overload must not be static.
               ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
        foo3(a) { }
        ~~~~
!!! error TS2387: Function overload must be static.
             ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    class C4 {
        // ERROR
        static foo4(n: number);
               ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
        foo4(s: string);
        ~~~~
!!! error TS2387: Function overload must be static.
        ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo4(a) { }
               ~~~~
!!! error TS2388: Function overload must not be static.
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }
    class C5 {
        // OK
        foo5(n: number);
        ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
        foo5(s: string);
        ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
        foo5(a) { }
             ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    
        // OK
        static foo5(n: number);
               ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo5(s: string);
               ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
        static foo5(a) { }
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    }